add get current user
